--- a/c09/ex01/Makefile
+++ b/c09/ex01/Makefile
@@ -1,34 +1,25 @@
-NAME = libft.a
+LNAME = libft.a
+SDIR = srcs
+CC = gcc
+CFLAGS = -Wall -Wextra -Werror -Iincludes
 
-SRCS_DIR = srcs
-SRCS = $(addprefix $(SRCS_DIR)/, ft_putchar.c ft_swap.c ft_putstr.c ft_strlen.c ft_strcmp.c)
-
-OBJS_DIR = $(SRCS_DIR) # Object dosyaları da srcs dizininde olacak
+SRCS = $(addprefix $(SDIR)/, ft_putchar.c ft_putstr.c ft_strcmp.c ft_strlen.c ft_swap.c)
 OBJS = $(SRCS:.c=.o)
 
 
-INCLUDES_DIR = includes
-INCLUDES = -I$(INCLUDES_DIR)
+all: $(LNAME)
 
-CC = gcc
-CFLAGS = -Wall -Wextra -Werror
+$(LNAME): $(OBJS)
+	ar -rcs $(LNAME) $(OBJS)
 
-all: $(NAME)
-
-$(NAME): $(OBJS)
-	ar rcs $(NAME) $(OBJS)
-	@echo "libft.a oluşturuldu."
-
-$(OBJS_DIR)/%.o: $(SRCS_DIR)/%.c $(INCLUDES_DIR)/ft.h
-	$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
+$(SDIR)/%.o: $(SDIR)/%.c
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
 	rm -f $(OBJS)
-	@echo "Object dosyaları silindi."
 
 fclean: clean
-	rm -f $(NAME)
-	@echo "libft.a silindi."
+	rm -f $(LNAME)
 
 re: fclean all
 
